--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "devDependencies": {
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.5.3",
         "browser-sync": "^2.26.13",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^7.0",
@@ -21,13 +21,11 @@
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "react": "^16.2.0",
+        "react-bootstrap": "^1.4.0",
         "react-dom": "^16.2.0",
+        "react-router-dom": "^5.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
-    },
-    "dependencies": {
-        "bulma": "^0.9.1",
-        "react-router-dom": "^5.2.0"
     }
 }
