--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "classnames": "^2.2.6",
+        "prop-types": "^15.7.2",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5"
     }
 }
