--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "classnames": "^2.2.6",
+        "layout-grid": "^2.2.0",
         "prop-types": "^15.7.2",
         "react-redux": "^7.2.2",
         "redux": "^4.0.5"
